--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -102,6 +102,8 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
     <Compile Include="Assets\InteractionSystem.cs" />
+    <Compile Include="Assets\LoadL1.cs" />
+    <Compile Include="Assets\TimelineManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
